# impossible

./: .gitignore  .stylish-haskell.yaml  ChangeLog.md  LICENSE  README.md  impossible.cabal  package.yaml  stack.yaml
src/: BinSearch.hs  Impossible.hs  Util.hs
src/Data/: Bit.hs  Cantor.hs  Natural.hs
